apply plugin: 'com.android.application'
apply plugin: 'android'
apply plugin: 'me.tatarka.retrolambda'  //RetroLamda
apply plugin: 'android-apt'     // Android-Annotation
apply plugin: 'org.robolectric'     // Android-Test


android {
    compileSdkVersion 21
    buildToolsVersion "21.1.2"

    defaultConfig {
        applicationId "com.example.hmw.lambdatest"
        minSdkVersion 15
        targetSdkVersion 21
        versionCode 1
        versionName "1.0"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

configurations {
    apt
}

repositories {
    mavenCentral()
//    jcenter()
//    maven {
//        url 'https://oss.sonatype.org/content/repositories/snapshots/'
//    }
}

dependencies {
    apt 'org.androidannotations:androidannotations:3.2'

    compile fileTree(dir: 'libs', include: ['*.jar'])

    compile "org.androidannotations:androidannotations-api:3.2"
    compile 'com.android.support:appcompat-v7:21.0.0'
    compile 'io.reactivex:rxandroid:0.24.0'
    compile 'com.squareup.okhttp:okhttp:2.3.0'


    testCompile 'junit:junit:4.12'
    testCompile 'org.robolectric:robolectric:2.4'
}

retrolambda {
    jdk java8_home
    oldJdk java6_home
    javaVersion JavaVersion.VERSION_1_6
}

apt {
    arguments {
        resourcePackageName android.defaultConfig.applicationId
        androidManifestFile variant.outputs[0].processResources.manifestFile
    }
}

robolectric {
    // Configure includes / excludes
    include '**/*Test.class'
    exclude '**/espresso/**/*.class'

    // Configure max heap size of the test JVM
    maxHeapSize = '2048m'

    // Configure the test JVM arguments - Does not apply to Java 8
    //jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'

    // Specify max number of processes (default is 1)
    maxParallelForks = 4

    // Specify max number of test classes to execute in a test process
    // before restarting the process (default is unlimited)
    forkEvery = 150

    // configure whether failing tests should fail the build
//    ignoreFailures true

    // use afterTest to listen to the test execution results
    /*afterTest { descriptor, result ->
        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
    }*/
}